--- a/app/src/main/res/drawable/btn_radio_shape.xml
+++ b/app/src/main/res/drawable/btn_radio_shape.xml
@@ -6,7 +6,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="#FF8900" >
+        android:color="@color/orange" >
     </stroke>
 
     <corners
