--- a/app/src/main/res/drawable/default_image_dark.xml
+++ b/app/src/main/res/drawable/default_image_dark.xml
@@ -5,8 +5,8 @@
     <size android:height="24dp" android:width="24dp"/>
 
     <stroke
-        android:width="1dp"
-        android:color="@color/white" >
+        android:width="0.4dp"
+        android:color="@color/message_grey_line" >
     </stroke>
 
     <corners
