--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -3,135 +3,143 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@color/bg_grey"
     tools:context=".ProfileEditActivity">
 
 
-    <androidx.cardview.widget.CardView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:contentPadding="10dp">
+        android:background="@color/white"
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="30dp">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/profile_cancel_btn"
+            style="@style/TextOrangeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cancel_btn" />
 
-            <ImageView
-                android:id="@+id/profile_image"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="0dp"
-                app:srcCompat="@drawable/googleg_standard_color_18" />
+        <TextView
+            android:id="@+id/profile_save_btn"
+            style="@style/TextGreyButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp"
+            android:text="@string/save_btn" />
 
-            <ImageButton
-                android:id="@+id/profile_image_choose"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/profile_image"
-                android:layout_alignTop="@+id/profile_image"
-                android:layout_alignEnd="@+id/profile_image"
-                android:layout_alignBottom="@+id/profile_image"
-                android:layout_marginStart="23dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="21dp"
-                android:layout_marginBottom="25dp"
-                app:srcCompat="@android:drawable/ic_menu_camera" />
+        <ImageView
+            android:id="@+id/profile_image"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_below="@+id/profile_cancel_btn"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="24dp"
+            app:srcCompat="@drawable/default_image_dark" />
 
-            <EditText
-                android:id="@+id/profile_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="7dp"
-                android:layout_marginTop="3dp"
-                android:layout_toEndOf="@+id/profile_image"
-                android:ems="10"
-                android:hint="Name"
-                android:inputType="textPersonName" />
+        <ImageButton
+            android:id="@+id/profile_image_choose"
+            android:layout_width="38dp"
+            android:layout_height="42dp"
+            android:layout_alignStart="@+id/profile_image"
+            android:layout_alignTop="@+id/profile_image"
+            android:layout_alignEnd="@+id/profile_image"
+            android:layout_alignBottom="@+id/profile_image"
+            android:layout_marginStart="31dp"
+            android:layout_marginTop="29dp"
+            android:layout_marginEnd="31dp"
+            android:layout_marginBottom="29dp"
+            android:alpha="0.8"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            android:tint="@color/yellow"
+            app:srcCompat="@drawable/ic_camera" />
 
-            <EditText
-                android:id="@+id/profile_last_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/profile_name"
-                android:layout_marginStart="6dp"
-                android:layout_marginTop="0dp"
-                android:layout_toEndOf="@+id/profile_image"
-                android:ems="10"
-                android:hint="Last name"
-                android:inputType="textPersonName" />
-        </RelativeLayout>
+        <EditText
+            android:id="@+id/profile_name"
+            style="@style/Form.Input2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/profile_image"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="-1dp"
+            android:layout_toEndOf="@+id/profile_image"
+            android:ems="10"
+            android:hint="@string/profile_name"
+            android:inputType="textPersonName" />
 
+        <EditText
+            android:id="@+id/profile_last_name"
+            style="@style/Form.Input2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/profile_name"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_toEndOf="@+id/profile_image"
+            android:ems="10"
+            android:hint="@string/profile_surname"
+            android:inputType="textPersonName" />
 
-    </androidx.cardview.widget.CardView>
+    </RelativeLayout>
 
-    <androidx.cardview.widget.CardView
+    <View
+        android:id="@+id/divider6"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        app:contentPadding="10dp">
+        android:layout_height="1.1dp"
+        android:layout_weight="1"
+        android:background="@color/message_grey_line" />
+
+    <View
+        android:id="@+id/divider7"
+        android:layout_width="match_parent"
+        android:layout_height="1.1dp"
+        android:layout_marginTop="20dp"
+        android:layout_weight="1"
+        android:background="@color/message_grey_line" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/textView16"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_weight="1"
+                android:text="@string/profile_phone" />
 
-                <TextView
-                    android:id="@+id/textView16"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Phone" />
-
-                <TextView
-                    android:id="@+id/profile_phone"
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="(063) 630-83-15"
-                    android:textAlignment="textEnd" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/nav_type"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="email" />
-
-                <TextView
-                    android:id="@+id/profile_email"
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="example@gmail.com"
-                    android:textAlignment="textEnd" />
-
-            </LinearLayout>
+            <TextView
+                android:id="@+id/profile_phone"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="@string/profile_phone_hint"
+                android:paddingRight="10dp"
+                android:textAlignment="textEnd" />
 
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
-
-    <Button
-        android:id="@+id/profile_save_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Save" />
+    </LinearLayout>
 
 </LinearLayout>
