--- a/app/src/main/res/layout/adapter_message_chat_list_item.xml
+++ b/app/src/main/res/layout/adapter_message_chat_list_item.xml
@@ -48,9 +48,11 @@
             android:text="23:34" />
 
         <View
+            android:id="@+id/divider5"
             android:layout_width="match_parent"
-            android:layout_height="1dip"
+            android:layout_height="1.1dp"
             android:layout_alignParentBottom="true"
+            android:layout_weight="1"
             android:background="@color/message_grey_line" />
 
     </RelativeLayout>
