--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="yellow">#ffd533</color>
     <color name="dark_yellow">#ccae2a</color>
     <color name="grey">#B4B4B4</color>
+    <color name="orange">#FF8900</color>
 
     <color name="bg_grey">#F7F6F6</color>
 
