--- a/app/src/main/res/layout/activity_messenger.xml
+++ b/app/src/main/res/layout/activity_messenger.xml
@@ -21,8 +21,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:background="@color/message_header_bg">
+                android:layout_height="60dp">
 
                 <ImageButton
                     android:id="@+id/message_header_exit_btn"
@@ -30,12 +29,34 @@
                     android:layout_height="35dp"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
-                    android:layout_marginStart="17dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="9dp"
+                    android:layout_marginTop="14dp"
                     android:background="@null"
                     android:padding="4dp"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/ic_chevron_left" />
+
+                <TextView
+                    android:id="@+id/textView10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/message_header_exit_btn"
+                    android:layout_marginStart="-3dp"
+                    android:layout_marginTop="7dp"
+                    android:layout_toEndOf="@+id/message_header_exit_btn"
+                    android:text="@string/map"
+                    android:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/textView34"
+                    style="@style/Messenger.ChatListHeader"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="128dp"
+                    android:layout_marginTop="17dp"
+                    android:text="@string/message_chat_label" />
 
                 <View
                     android:id="@+id/divider4"
@@ -110,7 +131,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
                         android:layout_marginStart="5dp"
-                        android:layout_marginTop="0dp"
+                        android:layout_marginTop="2dp"
                         android:layout_toEndOf="@+id/message_header_image"
                         android:text="Name" />
 
@@ -126,10 +147,11 @@
                 </RelativeLayout>
 
                 <View
-                    android:id="@+id/view"
+                    android:id="@+id/divider8"
                     android:layout_width="match_parent"
-                    android:layout_height="1dip"
+                    android:layout_height="1.1dp"
                     android:layout_alignParentBottom="true"
+                    android:layout_weight="1"
                     android:background="@color/message_grey_line" />
 
             </RelativeLayout>
@@ -140,8 +162,8 @@
                 android:layout_height="match_parent"
                 android:layout_above="@+id/message_bottm"
                 android:layout_below="@+id/message_header"
-                android:layout_marginTop="0dp"
-                android:layout_marginBottom="0dp" />
+                android:layout_marginBottom="0dp"
+                android:background="@color/bg_grey" />
 
             <RelativeLayout
                 android:id="@+id/message_bottm"
@@ -161,10 +183,13 @@
                 <EditText
                     android:id="@+id/message_inp"
                     style="@style/Messenger.Message.Input"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentBottom="true"
+                    android:layout_marginStart="11dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="4dp"
                     android:layout_toStartOf="@+id/message_btn"
                     android:ems="10"
                     android:hint="@string/message_input_placeholder"
@@ -176,7 +201,7 @@
                     android:layout_height="30dp"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginEnd="20dp"
+                    android:layout_marginEnd="16dp"
                     android:layout_marginBottom="10dp"
                     android:background="@null"
                     android:scaleType="centerCrop"
