--- a/app/src/main/res/layout/adapter_message_list_item.xml
+++ b/app/src/main/res/layout/adapter_message_list_item.xml
@@ -9,6 +9,7 @@
         style="@style/Messenger.Item"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginRight="50dp"
         android:orientation="vertical">
 
         <TextView
