--- a/app/src/main/res/layout/adapter_message_list_item_received.xml
+++ b/app/src/main/res/layout/adapter_message_list_item_received.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="right"
+        android:layout_marginLeft="50dp"
         android:orientation="vertical">
 
         <TextView
