--- a/app/src/main/res/layout/activity_request_list.xml
+++ b/app/src/main/res/layout/activity_request_list.xml
@@ -5,6 +5,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/request_list"
+        android:background="@color/bg_grey"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
