--- a/app/src/main/res/layout/adapter_request_list_item.xml
+++ b/app/src/main/res/layout/adapter_request_list_item.xml
@@ -1,140 +1,209 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_marginBottom="20dp">
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/message_header_bg"
+            android:paddingBottom="10dp">
+
+            <ImageView
+                android:id="@+id/user_image"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="11dp"
+                app:srcCompat="@drawable/googleg_standard_color_18" />
+
+            <TextView
+                android:id="@+id/user_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/user_image"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="1dp"
+                android:layout_toEndOf="@+id/user_image"
+                android:text="Name" />
+
+            <TextView
+                android:id="@+id/request_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="18dp"
+                android:layout_marginEnd="12dp"
+                android:text="time" />
+
+            <TextView
+                android:id="@+id/request_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/user_name"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="3dp"
+                android:layout_toEndOf="@+id/user_image"
+                android:text="Status" />
+
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/divider10"
+            android:layout_width="match_parent"
+            android:layout_height="1.1dp"
+
+            android:layout_weight="1"
+            android:background="@color/message_grey_line" />
 
         <LinearLayout
+            android:id="@+id/route_info"
+            style="@style/RequestList.Line"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <RelativeLayout
+            <TextView
+                android:id="@+id/textView23"
+                style="@style/RequestList.Title"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:text="Route" />
 
-                <ImageView
-                    android:id="@+id/user_image"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginTop="18dp"
-                    app:srcCompat="@drawable/googleg_standard_color_18" />
-
-                <TextView
-                    android:id="@+id/user_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignTop="@+id/user_image"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="1dp"
-                    android:layout_toEndOf="@+id/user_image"
-                    android:text="Name" />
-
-                <TextView
-                    android:id="@+id/request_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginTop="2dp"
-                    android:layout_marginEnd="9dp"
-                    android:text="time" />
-
-            </RelativeLayout>
-
-            <LinearLayout
-                android:id="@+id/route_info"
+            <TextView
+                android:id="@+id/route_name"
+                style="@style/RequestList.Text"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:text="Route name" />
 
-                <TextView
-                    android:id="@+id/textView23"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Route"
-                    android:textStyle="bold|italic" />
+            <View
+                android:id="@+id/divider11"
+                android:layout_width="match_parent"
+                android:layout_height="1.1dp"
+                android:layout_marginTop="8dp"
+                android:layout_weight="1"
+                android:background="@color/message_grey_line" />
+        </LinearLayout>
 
-                <TextView
-                    android:id="@+id/route_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Route name" />
-            </LinearLayout>
+
+        <LinearLayout
+            style="@style/RequestList.Line"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textView25"
+                style="@style/RequestList.Title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Location" />
 
             <TextView
                 android:id="@+id/location_time"
+                style="@style/RequestList.Text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="00:00" />
 
-            <TextView
-                android:id="@+id/textView18"
+            <View
+                android:id="@+id/divider12"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="10dp"
-                android:text="Message"
-                android:textStyle="bold|italic" />
+                android:layout_height="1.1dp"
+                android:layout_marginTop="8dp"
+                android:layout_weight="1"
+                android:background="@color/message_grey_line" />
 
             <TextView
-                android:id="@+id/request_message"
+                android:id="@+id/textView18"
+                style="@style/RequestList.Title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Message" />
 
             <TextView
-                android:id="@+id/request_status"
+                android:id="@+id/request_message"
+                style="@style/RequestList.Text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Status" />
+                android:text="Message" />
 
-            <LinearLayout
+            <View
+                android:id="@+id/divider13"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/accept_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Accept" />
-
-                <Button
-                    android:id="@+id/message_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Message" />
-
-                <Button
-                    android:id="@+id/denied_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Denied" />
-
-                <Button
-                    android:id="@+id/cancel_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@android:string/cancel" />
-            </LinearLayout>
+                android:layout_height="1.1dp"
+                android:layout_marginTop="8dp"
+                android:layout_weight="1"
+                android:background="@color/message_grey_line" />
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp">
 
-</LinearLayout>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/accept_btn"
+                style="@style/RequestList.ActionBtn"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="10dp"
+                android:text="Accept"
+                app:backgroundTint="#4ce4b1" />
+
+            <ImageView
+                android:id="@+id/imageView8"
+                style="@style/RequestList.ActionBtnIcon"
+                android:layout_alignEnd="@+id/accept_btn"
+                app:srcCompat="@drawable/ic_smile" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/message_btn"
+                style="@style/RequestList.ActionBtn"
+                android:layout_marginStart="14dp"
+                android:layout_marginEnd="14dp"
+                android:layout_toStartOf="@+id/cancel_btn"
+                android:layout_toEndOf="@+id/accept_btn"
+                android:text="Message"
+                app:backgroundTint="#4187ff" />
+
+            <ImageView
+                android:id="@+id/imageView7"
+                style="@style/RequestList.ActionBtnIcon"
+                android:layout_alignEnd="@+id/message_btn"
+                app:srcCompat="@drawable/ic_comment" />
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/cancel_btn"
+                style="@style/RequestList.ActionBtn"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="10dp"
+                android:text="Message"
+                app:backgroundTint="#bec2ce" />
+
+            <ImageView
+                android:id="@+id/imageView9"
+                style="@style/RequestList.ActionBtnIcon"
+                android:layout_alignEnd="@+id/cancel_btn"
+                app:srcCompat="@drawable/ic_trash_alt" />
+
+        </RelativeLayout>
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
+
